# rpi_stuff

./: .ansible-lint  .envrc  .gitattributes  .gitignore  .yamllint  LICENSE  README.md  ansible.cfg  check-docker-updates.sh  devbox.json  galaxy.yml  hosts  komodo-common.toml  komodo-lisa.toml  komodo-lovelace.toml  komodo.toml  readme.org  renovate.json  requirements.txt  site.yml
.github/workflows/: docker-test.yml  local-test.yml  publish.yml
app/: README.md  ansible.cfg  hosts  requirements.txt  secrets.yml  secrets.yml.sample  site.yml  vars.yml
molecule/default/: Dockerfile  Dockerfile.j2  converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
molecule/infra/: .terraform.lock.hcl  main.tf
nixos/: flake.nix
nixos/hosts/: configuration.nix  default.nix
nixos/modules/: scanning.nix  ssh-auth.nix
pedro_app/: Makefile  PLAN.md  README.md  TROUBLESHOOTING.md  ansible.cfg  homelab-setup.yml  hosts  prometheus.yml  secrets.yml  site.yml  tailscale.acl.js  vars.yml
pedro_app/synthetics/: idea.md  mittel_video_sync.js
roles/boilerplate/: README.md
roles/komodo/: README.md
roles/o11y-prereq/: README.md
roles/observability/: README.md
roles/plex/: README.md
roles/torrent/: README.md
roles/torrent/bot/: Cargo.toml
roles/torrent/bot/src/: main.rs
roles/zfs/: README.md
stacks/actual/: compose.yaml
stacks/adguard/: compose-exporter.yaml  compose.yaml
stacks/arm/: arm.yaml  compose.yaml
stacks/backup/: compose.yaml
stacks/caddy/: Caddyfile  README.md  compose.yaml
stacks/emby/: compose.yaml
(+201 files in other folders)
