[package]
name = "torrent-bot"
version = "0.1.0"
authors = ["Guilherme Henrique <gjhenrique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"

futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
