[package]
name = "torrent-bot"
version = "0.1.0"
authors = ["Guilherme Henrique <gjhenrique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"

futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
# Not secure, but not so much risk having an outdated ssl library
# https://github.com/rust-embedded/cross/issues/229
openssl = { version = "0.10", features = ["vendored"] }
